; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_clock.c_bintime2usclock.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_clock.c_bintime2usclock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bintime = type { i32, i32 }

@USEC_PER_SEC = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bintime*, i32*, i32*)* @bintime2usclock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bintime2usclock(%struct.bintime* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.bintime*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.bintime* %0, %struct.bintime** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.bintime*, %struct.bintime** %4, align 8
  %8 = getelementptr inbounds %struct.bintime, %struct.bintime* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  store i32 %9, i32* %10, align 4
  %11 = load i64, i64* @USEC_PER_SEC, align 8
  %12 = trunc i64 %11 to i32
  %13 = load %struct.bintime*, %struct.bintime** %4, align 8
  %14 = getelementptr inbounds %struct.bintime, %struct.bintime* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = ashr i32 %15, 32
  %17 = mul nsw i32 %12, %16
  %18 = ashr i32 %17, 32
  %19 = load i32*, i32** %6, align 8
  store i32 %18, i32* %19, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
